deployment/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kioku-frontend-deployment
  labels:
    app: kioku-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kioku-frontend
  template:
    metadata:
      labels:
        app: kioku-frontend
    spec:
      containers:
      - name: kioku-frontend
        image: ghcr.io/kioku-project/kioku_frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: kioku-frontend-service
spec:
  selector:
    app: kioku-frontend
  ports:
    - port: 8082
      targetPort: 3000
  type: LoadBalancer
