deployment/login.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kioku-login-deployment
  labels:
    app: kioku-login
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kioku-login
  template:
    metadata:
      labels:
        app: kioku-login
    spec:
      containers:
      - name: kioku-login
        image: ghcr.io/kioku-project/kioku_login
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kioku-login-service
spec:
  selector:
    app: kioku-login
  ports:
    - port: 8084
      targetPort: 80
  type: LoadBalancer
