deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: endpoint-ingress
  labels:
    app: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.kioku.dev
      http:
        paths:
          - path: / # TODO: Fix backend calls in services / create new ingress
            pathType: Prefix
            backend:
              service:
                name: kioku-frontend-service
                port:
                  number: 8082
          - path: /hello
            pathType: Exact
            backend:
              service:
                name: hello-world-service
                port:
                  number: 8083
          - path: /backend
            pathType: Exact
            backend:
              service:
                name: kioku-backend-service
                port:
                  number: 8084
